@@ -1,6 +1,7 @@
 #include "propertyproxy.h"
 #include "sconnect.h"
 #include "contextproperty.h"
+#include "contextpropertyinfo.h"
 #include "property.h"
 #include "logging.h"
 
@@ -28,9 +29,21 @@ QVariant PropertyProxy::realValue() const
     return value;
 }
 
+QString PropertyProxy::type() const
+{
+    return subscriber->info()->type();
+}
+
 void PropertyProxy::onValueChanged()
 {
     value = subscriber->value();
     if (enabled)
         provider->setValue(value);
+    QTextStream out(stdout);
+    out << "real: " << type() << " " << subscriber->key();
+    if (realValue().isNull())
+        out << " is Unknown" << endl;
+    else
+        out << " = " << realValue().toString() << endl;
+    out.flush();
 }
