@@ -6,8 +6,9 @@ contextkit (0.4~unreleased) unstable; urgency=low
     libcontextsubscriber.
   * The start command in context-provide is now able to reregister
     the service name if needed as advertised in the help.
+  * context-provide supports proxying in Commander mode.
 
-  Implemented: SWP#CntFr-349
+  Implemented: SWP#CntFr-349, SWP#CntFr-353
 
  -- Gergely Risko <gergely+context@risko.hu>  Thu, 22 Oct 2009 13:42:27 +0300
 
